Fix content task styles and fix overlap learn button

--- a/app/styles/tasks/tasks.scss
+++ b/app/styles/tasks/tasks.scss
@@ -45,9 +45,9 @@
       .content-tasks {
         position: absolute;
         width: 92%;
-        top: 22%;
+        top: 21%;
         left: 3%;
-        height: 80%;
+        height: 77%;
         padding: 0px 0px 4% 4%;
         z-index: 1;
 
@@ -127,6 +127,8 @@
 
           .content_tasks {
             padding: 10px;
+            margin: 15px 12px;
+
             .scroll{
               display: flex;
               flex-wrap: wrap;
